--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>This is version 5</h1>
+	<h1>This is version 6 this is design version</h1>
 </body>
 </html>
